<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C6C7C4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8DB1AB">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="20dp"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:src="@drawable/imagem5"/>

        <TextView
            android:id="@+id/gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:text="@string/gasto"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="80dp"
            android:layout_marginTop="20dp"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:src="@drawable/imagem2"/>

        <TextView
            android:id="@+id/viagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="70dp"
            android:layout_alignTop="@id/gasto"
            android:text="@string/viagem"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="200dp"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:src="@drawable/imagem3"/>

        <TextView
            android:id="@+id/MinhaViagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="80dp"
            android:clickable="true"
            android:text="@string/Minhaviagem"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="90dp"
            android:layout_marginTop="230dp"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:src="@drawable/imagem6"/>

        <TextView
            android:id="@+id/configurações"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="80dp"
            android:layout_marginRight="70dp"
            android:text="@string/Configurações"/>

    </RelativeLayout>


</LinearLayout>
